# RNA-GNN

./: .gitignore  LICENSE  README.md  best_model.pth  createpredictedionpdb.py  gcn_model.py  moleculestreamlit.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  rna_metrics.py  rna_seed.py  rna_splits.py
.github/workflows/: ci.yml
.streamlit/: config.toml
GNN_models/: predfrommodel.py  train_gnn.py  train_gnn1.py  train_gnn2.py
GNN_models/GNN-DTI/: dataset.py  gnn.py  layers.py  test.py  train.py  utils.py
data/: Mg_ions.sdf  predicted_coords.sdf  preds_RNA1FUFf.csv
data/RNA-graph-pickles/: 1fuf_pos.pkl
dataset_creation/: atom_features.py  gnn_rna.py  gnn_rna_0A.py  gnn_rna_autodock.py  gnn_rna_morepos.py
preprocessing/: bestresolutionfromcluster.py  clustering1.py  clustering2.py  clustering3.py
tests/: test_atom_features.py  test_gcn_model.py  test_gnn_dti.py  test_model_forward.py  test_pdb_merge.py  test_rna_metrics.py  test_rna_splits.py
